--- a/app/src/main/res/layout/belgian_game_creation.xml
+++ b/app/src/main/res/layout/belgian_game_creation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
     android:id="@+id/scrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
@@ -16,17 +16,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical" 
-            android:background="#0f0f0f" >
+            android:background="#0f0f0f"
+            android:orientation="vertical">
 
 			<!-- Titre Mort et Distributeur -->
             <TextView
                 android:id="@+id/txtTitleDeadAndDealer"
+                style="@style/GameSectionTitleStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#005555"
                 android:padding="5dip"
-                style="@style/GameSectionTitleStyle"
                 android:text="@string/lblDealerSection" />
                 
             <!-- Panel Mort et Distributeur -->
@@ -34,32 +34,32 @@
                 android:id="@+id/panelDeadAndDealer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible" 
                 android:background="#0f0f0f"
-				android:paddingBottom="10dip">
+                android:orientation="vertical"
+                android:paddingBottom="10dip"
+                android:visibility="visible">
                 
                 <!-- Panel Dead -->
                 <RelativeLayout
                     android:id="@+id/panelDead"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDead"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/lblDeadPlayer" />
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryDead"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -72,22 +72,22 @@
                     android:id="@+id/panelDealer"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDealer"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/lblDealer" />
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryDealer"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -103,17 +103,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical" 
-            android:background="#0f0f0f" >
+            android:background="#0f0f0f"
+            android:orientation="vertical">
 
 			<!-- Titre Paramètres principaux -->
             <TextView
                 android:id="@+id/txtTitleMainParameters"
+                style="@style/GameSectionTitleStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#005555"
                 android:padding="5dip"
-                style="@style/GameSectionTitleStyle"
                 android:text="@string/lblMainParametersSection" />
             
             <!-- Panel Paramètres principaux -->
@@ -121,32 +121,32 @@
                 android:id="@+id/panelMainParameters"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible"
                 android:background="#0f0f0f"
-				android:paddingBottom="10dip">
+                android:orientation="vertical"
+                android:paddingBottom="10dip"
+                android:visibility="visible">
                 
                 <!-- Panel first -->
                 <RelativeLayout
                     android:id="@+id/panelFirst"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleFirst"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/first"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryFirst"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -159,22 +159,22 @@
                     android:id="@+id/panelSecond"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleSecond"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/second"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/gallerySecond"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -187,22 +187,22 @@
                     android:id="@+id/panelThird"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleThird"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/third"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryThird"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -215,22 +215,22 @@
                     android:id="@+id/panelFourth"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="gone" 
-                    android:background="#0f0f0f">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/txtTitleFourth"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/fourth"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryFourth"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -243,22 +243,22 @@
                     android:id="@+id/panelFifth"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="gone" 
-                    android:background="#0f0f0f">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/txtTitleFifth"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/fifth"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryFifth"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
