--- a/app/src/main/res/layout/belgian_game_read.xml
+++ b/app/src/main/res/layout/belgian_game_read.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout 
+<FrameLayout
+    android:id="@+id/frameLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/org.nla.tarotdroid"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:id="@+id/frameLayout" >
+    android:layout_height="fill_parent">
     
 <ScrollView 
     android:layout_width="fill_parent"
@@ -22,17 +21,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical" 
-            android:background="#0f0f0f" >
+            android:background="#0f0f0f"
+            android:orientation="vertical">
 
 			<!-- Titre Mort et Distributeur -->
             <TextView
                 android:id="@+id/txtTitleDeadAndDealer"
+                style="@style/GameSectionTitleStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#005555"
                 android:padding="5dip"
-                style="@style/GameSectionTitleStyle"
                 android:text="@string/lblDealerSection" />
                 
             <!-- Panel Mort et Distributeur -->
@@ -40,32 +39,32 @@
                 android:id="@+id/panelDeadAndDealer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible" 
                 android:background="#0f0f0f"
-				android:paddingBottom="10dip">
+                android:orientation="vertical"
+                android:paddingBottom="10dip"
+                android:visibility="visible">
                 
                 <!-- Panel Dead -->
                 <RelativeLayout
                     android:id="@+id/panelDead"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDead"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/lblDeadPlayer" />
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryDead"
                         android:layout_width="fill_parent"
@@ -80,22 +79,22 @@
                     android:id="@+id/panelDealer"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDealer"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/lblDealer"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryDealer"
                         android:layout_width="fill_parent"
@@ -112,17 +111,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical" 
-            android:background="#0f0f0f" >
+            android:background="#0f0f0f"
+            android:orientation="vertical">
 
 			<!-- Titre Paramètres principaux -->
             <TextView
                 android:id="@+id/txtTitleMainParameters"
+                style="@style/GameSectionTitleStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#005555"
                 android:padding="5dip"
-                style="@style/GameSectionTitleStyle"
                 android:text="@string/lblMainParametersSection" />
             
             <!-- Panel Paramètres principaux -->
@@ -130,32 +129,32 @@
                 android:id="@+id/panelMainParameters"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible"
                 android:background="#0f0f0f"
-				android:paddingBottom="10dip">
+                android:orientation="vertical"
+                android:paddingBottom="10dip"
+                android:visibility="visible">
                 
                 <!-- Panel first -->
                 <RelativeLayout
                     android:id="@+id/panelFirst"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleFirst"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/first"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryFirst"
                         android:layout_width="fill_parent"
@@ -169,22 +168,22 @@
                     android:id="@+id/panelSecond"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleSecond"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/second"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/gallerySecond"
                         android:layout_width="fill_parent"
@@ -198,22 +197,22 @@
                     android:id="@+id/panelThird"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleThird"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/third"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryThird"
                         android:layout_width="fill_parent"
@@ -227,22 +226,22 @@
                     android:id="@+id/panelFourth"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="gone" 
-                    android:background="#0f0f0f">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/txtTitleFourth"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/fourth"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryFourth"
                         android:layout_width="fill_parent"
@@ -256,22 +255,22 @@
                     android:id="@+id/panelFifth"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="gone" 
-                    android:background="#0f0f0f">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/txtTitleFifth"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/fifth"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                          
                         android:id="@+id/galleryFifth"
                         android:layout_width="fill_parent"
