--- a/app/src/main/res/layout/passed_game_creation.xml
+++ b/app/src/main/res/layout/passed_game_creation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
     android:id="@+id/scrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
+    android:layout_height="fill_parent"
     android:background="#0f0f0f">
 
     <LinearLayout
@@ -17,17 +17,17 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical" 
-            android:background="#0f0f0f" >
+            android:background="#0f0f0f"
+            android:orientation="vertical">
 
 			<!-- Titre Mort et Distributeur -->
             <TextView
                 android:id="@+id/txtTitleDeadAndDealer"
+                style="@style/GameSectionTitleStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#005555"
                 android:padding="5dip"
-                style="@style/GameSectionTitleStyle"
                 android:text="@string/lblDealerSection" />
                 
             <!-- Panel Mort et Distributeur -->
@@ -35,32 +35,32 @@
                 android:id="@+id/panelDeadAndDealer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible" 
                 android:background="#0f0f0f"
-				android:paddingBottom="10dip">
+                android:orientation="vertical"
+                android:paddingBottom="10dip"
+                android:visibility="visible">
                 
                 <!-- Panel Dead -->
                 <RelativeLayout
                     android:id="@+id/panelDead"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDead"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        style="@style/GameSubsectionTitleStyle"
                         android:text="@string/lblDeadPlayer" />
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryDead"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -73,22 +73,22 @@
                     android:id="@+id/panelDealer"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#0f0f0f"
                     android:orientation="horizontal"
-                    android:visibility="visible" 
-                    android:background="#0f0f0f">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtTitleDealer"
+                        style="@style/GameSubsectionTitleStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dip"
                         android:background="#0f0f0f"
                         android:minWidth="130dip"
                         android:padding="5dip"
-                        android:text="@string/lblDealer"
-                        style="@style/GameSubsectionTitleStyle"/>
+                        android:text="@string/lblDealer"/>
 
-                    <org.nla.tarotdroid.lib.ui.controls.Selector
+                    <org.nla.tarotdroid.ui.controls.Selector
                         android:id="@+id/galleryDealer"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
