--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="Theme.TarotDroid" parent="@style/Theme.AppCompat.Light.DarkActionBar">
 		<!--  item name="gdActionBarBackground">@drawable/action_bar_background</item-->
 		<!--  item name="gdActionBarApplicationDrawable">@drawable/greendroid_application_logo</item-->
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
 	</style>
 	
 	<style name="Theme.TarotDroid.Dialog" parent="@android:style/Theme.Dialog">
