--- a/app/src/main/res/layout/player_selector_item.xml
+++ b/app/src/main/res/layout/player_selector_item.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="10">
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal">
  
-    <LinearLayout 
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="2dp"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:layout_weight="8">
+        android:paddingTop="2dp">
         
-        <TextView 
+        <TextView
             android:id="@+id/txtPlayerIndex"
-            android:text="@string/lblPlayer1Name" 
-            android:layout_width="wrap_content" 
-            android:layout_height="wrap_content" 
-            android:paddingLeft="2dp"/>
-        <AutoCompleteTextView 
-            android:id="@+id/namePlayer1" 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="2dp"
+            android:text="@string/lblPlayer1Name"/>
+        <AutoCompleteTextView
+            android:id="@+id/namePlayer1"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" 
-            android:maxLength="9" 
-            android:completionThreshold="1" />
+            android:layout_height="wrap_content"
+            android:completionThreshold="1"
+            android:maxLength="9"/>
     </LinearLayout>
-    
-    <com.facebook.widget.ProfilePictureView
-        android:id="@+id/profilePicture"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        facebook:preset_size="small"
-        android:layout_weight="2"/>
+
 
 </LinearLayout>
