--- a/app/src/main/res/layout/simple_titles_old.xml
+++ b/app/src/main/res/layout/simple_titles_old.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
+    <com.viewpagerindicator.TitlePageIndicator
+        android:id="@+id/indicator"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        app:tabMode="fixed"/>
+        android:padding="10dip"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
@@ -19,4 +18,5 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"/>
+
 </LinearLayout>
