--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
 		<!--  item name="gdActionBarApplicationDrawable">@drawable/greendroid_application_logo</item-->
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
 	</style>
-	
-	<style name="Theme.TarotDroid.Dialog" parent="@android:style/Theme.Dialog">
+
+    <style name="Theme.TarotDroid.Dialog" parent="@style/Theme.AppCompat.Light.Dialog">
 	    <item name="android:windowNoTitle">true</item>	
 	</style>
 
