--- a/app/src/main/res/layout/main_dashboard.xml
+++ b/app/src/main/res/layout/main_dashboard.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@drawable/img_excuse">  
+			  android:layout_width="fill_parent"
+			  android:layout_height="fill_parent"
+			  android:background="@drawable/img_excuse"
+			  android:orientation="vertical">
 
  	<ListView
-	    android:id="@+id/listOptions"
-	    android:layout_width="fill_parent"
-	    android:layout_height="0dip"
-	    android:layout_weight="1" />
+		android:id="@+id/listOptions"
+		android:layout_width="match_parent"
+		android:layout_height="0dip"
+		android:layout_weight="1" />
  	
- 	<LinearLayout 
- 	    android:layout_width="wrap_content"
- 	    android:layout_height="wrap_content"
- 	    android:layout_gravity="bottom|center_horizontal"
- 	    android:orientation="horizontal"
- 	    android:layout_marginBottom="5dp">
+ 	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|center_horizontal"
+		android:layout_marginBottom="5dp"
+		android:orientation="horizontal">
 
 		<ImageView
 		    android:id="@+id/imgLikeUsOnFacebook"
